# truelink-monitor

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  README.zh-CN.md  flake.nix  org.kde.plasma.truelinkmonitor.metainfo.xml
.github/workflows/: ci.yml  release.yml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: FullRepresentation.qml  configGeneral.qml  main.qml
packaging/: README.md
packaging/aur/: PKGBUILD  README.md
po/: plasma_applet_org.kde.plasma.truelinkmonitor.pot
po/zh_CN/: plasma_applet_org.kde.plasma.truelinkmonitor.po
src/: nl80211helper.cpp  nl80211helper.h  qmldir  truelinkplugin.cpp  wifimonitor.cpp  wifimonitor.h
